--- a/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Modulo 01 - CodePark 01 Inspecionando Elementos/CodeParks/index.html
+++ b/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Modulo 01 - CodePark 01 Inspecionando Elementos/CodeParks/index.html
@@ -6,7 +6,7 @@
     <title>Code Parks - Módulo02</title>
 </head>
 <body>
-    <script src="CodePark_Variaveis.js"></scrip>
+    <script src="CodePark_MediaNotas.js"></script>
     
 </body>
 </html>
