--- a/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Módulo 02 - Estruturas e Variáveis em JavaScript/Index.html
+++ b/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Módulo 02 - Estruturas e Variáveis em JavaScript/Index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Cálculo Área da Esfera</title>
+    <title>Exercícios Módulo 02 - JavaScript</title>
 </head>
 <body>
-    <script src= "Funcoes/FuncaoRecursiva.js"> </script>
+    <script src="MD02_CP02_AppCalculadora.js"></script>
 </body>
 </html>
