--- a/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Módulo 02 - Estruturas e Variáveis em JavaScript/Index_MD02.html
+++ b/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Módulo 02 - Estruturas e Variáveis em JavaScript/Index_MD02.html
@@ -6,6 +6,6 @@
     <title>Exercícios Módulo 02 - JavaScript</title>
 </head>
 <body>
-    <script src="MD02_CP03_AppNotas.js"></script>
+    <script src="MD02_CP02_AppCalculadora_funcao.js"></script>
 </body>
 </html>
