--- a/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Módulo 04 - Desenv_Web Loops e Bibliotecas/index_MD04.html
+++ b/02 - JavaScript com Orientação a Objetos/Exercícios - JavaScript com Orientação a Objetos/Módulo 04 - Desenv_Web Loops e Bibliotecas/index_MD04.html
@@ -6,6 +6,6 @@
     <title>Objetos em JavaScript</title>
 </head>
 <body>
-    <script src="ContaCorrente.js"></script>
+    <script type="module" src="./MD04_CP01_Objetos/Clientes.js"></script>
 </body>
 </html>
